product details And Validations And design improvements(15 - sept - 2017)

--- a/app/src/main/res/drawable/primary_filled_round_corner.xml
+++ b/app/src/main/res/drawable/primary_filled_round_corner.xml
@@ -1,5 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/black_ripple"
+    >
+
+
+    <item android:id="@android:id/mask">
+        <color android:color="@color/colorPrimary"/> <!-- any color will do -->
+    </item>
+
+
+    <item>
+
+<shape >
     <solid android:color="@color/colorPrimary"/>
     <stroke android:width="0.5dip"
         android:color="@color/muted_grey" />
@@ -9,3 +23,8 @@
         android:right="0dip"
         android:bottom="0dip" />
 </shape>
+
+     </item>
+
+    </ripple>
+
