--- a/app/src/main/res/layout/add_address_layout.xml
+++ b/app/src/main/res/layout/add_address_layout.xml
@@ -386,7 +386,8 @@
             android:layout_weight="1"
             android:gravity="center"
             android:elevation="@dimen/_5sdp"
-            android:padding="@dimen/_5sdp"/>
+            android:padding="@dimen/_5sdp"
+            android:background="@drawable/ripple_text_white_grey"/>
 
 
 
