--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -116,7 +116,7 @@
                         android:layout_marginLeft="@dimen/_10sdp"
                         geekui:customTypeface="fonts/CoreSansDRegular.otf"
                         android:textSize="@dimen/small_text"
-                        android:background="@drawable/grey_round_corner"
+                        android:background="@drawable/selector_grey_black"
                         android:padding="@dimen/_5sdp"/>
 
                 </LinearLayout>
@@ -193,7 +193,7 @@
                     android:layout_marginLeft="@dimen/_10sdp"
                     geekui:customTypeface="fonts/CoreSansDRegular.otf"
                     android:textSize="@dimen/small_text"
-                    android:background="@drawable/grey_round_corner"
+                    android:background="@drawable/selector_grey_black"
                     android:padding="@dimen/_5sdp"
                     android:layout_gravity="center"/>
 
@@ -270,7 +270,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/grey_round_corner"
+                    android:background="@drawable/selector_grey_black"
                     android:layout_marginLeft="@dimen/_10sdp"
                     >
 
@@ -409,7 +409,7 @@
                     android:layout_marginLeft="@dimen/_10sdp"
                     geekui:customTypeface="fonts/CoreSansDRegular.otf"
                     android:textSize="@dimen/small_text"
-                    android:background="@drawable/grey_round_corner"
+                    android:background="@drawable/selector_grey_black"
                     android:padding="@dimen/_5sdp"
                     android:layout_gravity="center"/>
 
@@ -484,7 +484,8 @@
                 android:textColor="@color/colorPrimary"
                 android:text="CONTINUE"
                 android:textSize="@dimen/medium_text"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:background="@drawable/ripple_text_white_grey"/>
 
 
         </LinearLayout>
