--- a/app/src/main/res/layout/checkout_items_layout.xml
+++ b/app/src/main/res/layout/checkout_items_layout.xml
@@ -88,7 +88,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:src="@drawable/minus_rounde"
-            />
+            android:background="@drawable/ripple_text_white_grey"/>
 
 
            <LinearLayout
@@ -116,7 +116,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:src="@drawable/plus_rounded"
-            />
+            android:background="@drawable/ripple_text_white_grey"/>
 
 
        </LinearLayout>
@@ -130,13 +130,14 @@
 
             <views.textview.TypefaceTextView
                 android:id="@+id/remove_product"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="REMOVE"
                 android:textColor="@color/colorPrimary"
                 geekui:customTypeface="fonts/CoreSansDRegular.otf"
                 android:textSize="@dimen/medium_text"
-                android:gravity="right"/>
+                android:gravity="right"
+                android:background="@drawable/ripple_text_white_grey"/>
 
 
         </LinearLayout>
