--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,16 +13,8 @@
     <color name="black_ripple">#616161</color>
 
 
-    <color name="filtersfab">#ecf0f1</color>
-    <color name="filters_header">#303f9f</color>
-    <color name="filters_buttons">#ff4081</color>
-    <color name="filters_buttons_selected">#c2185b</color>
-    <color name="filters_chips">#b3e5fc</color>
+    <color name="drawer_color">#7F7F7F</color>
 
-    <color name="orange">#ff5722</color>
-    <color name="brown">#795548</color>
-    <color name="bg">#f5f5f5</color>
-    <color name="bgnew">#464756</color>
 
 
 
