Description And Features Screen , My Wishlist , Categories table (19 - sept - 2017)

--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -449,7 +449,7 @@
             android:layout_height="@dimen/_40sdp"
             android:orientation="vertical"
             android:layout_gravity="bottom"
-            >
+            android:background="@color/muted_white">
 
         <View
             android:layout_width="match_parent"
