--- a/app/src/main/res/layout/checkout_items_layout.xml
+++ b/app/src/main/res/layout/checkout_items_layout.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_100sdp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="@dimen/_5sdp"
         android:background="@color/muted_white">
@@ -25,9 +25,9 @@
             <ImageView
                 android:id="@+id/product_img"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_80sdp"
-                android:src="@drawable/watch_product"
-                android:padding="@dimen/_10sdp"/>
+                android:layout_height="match_parent"
+                android:padding="@dimen/_3sdp"
+                android:scaleType="fitCenter"/>
 
 
         </LinearLayout>
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_weight="0.6"
+            android:layout_weight="0.4"
             >
 
             <LinearLayout
